--- a/arrestedbar.html
+++ b/arrestedbar.html
@@ -1,4 +1,3 @@
-[10:49]
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
@@ -47,14 +46,14 @@ body{
  "translate(" + margin.left + "," + margin.top + ")");
  d3.json("../outputdata/outputJsonRaji2.json",function(err,data){
    data.forEach(function(d){
-     d.year=d.year;
+     d.Year=d.Year;
      d.Arrested=d.Arrested;
      d.NotArrested=d.NotArrested;
    });
    var xData=["Arrested","NotArrested"];
    var dataIntermediate = xData.map(function (c) {
      return data.map(function (d) {
-       return {x: d.year, y: d[c]};
+       return {x: d.Year, y: d[c]};
      });
    });
    var dataStackLayout = d3.layout.stack()(dataIntermediate);
